[gd_scene load_steps=9 format=2]

[ext_resource path="res://suicbot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/images/Drone.png" type="Texture" id=2]
[ext_resource path="res://scripts/drone.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/dronebullet.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/images/explosionlol.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sounds/explosion.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "drone"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 293.976, 134.752 )

[node name="drone" instance=ExtResource( 1 )]
script = ExtResource( 3 )
verticalSpeed = 67.0
health = 15
drone = true

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
vframes = 2
frame = 1

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -42.1836, -88.3382 )

[node name="VisibilityNotifier2D" parent="." index="2"]
position = Vector2( -39.8971, -88.2814 )
scale = Vector2( 7.65364, 7.86706 )

[node name="gun" type="Node2D" parent="FiringPosition" index="0"]
position = Vector2( -38.6812, -38.6812 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/drone = SubResource( 1 )

[node name="cooldown" type="Timer" parent="." index="6"]
wait_time = 0.7
one_shot = true

[node name="gunshot" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource( 4 )

[node name="explosion" type="Sprite" parent="." index="8"]
visible = false
position = Vector2( -55.7976, -170.122 )
scale = Vector2( 1.53421, 1.34693 )
texture = ExtResource( 5 )

[node name="exp" type="Area2D" parent="." index="9"]

[node name="ex" type="CollisionShape2D" parent="exp" index="0"]
position = Vector2( -39.9765, -197.248 )
shape = SubResource( 2 )
disabled = true

[node name="explosion2" type="AudioStreamPlayer" parent="." index="11"]
stream = ExtResource( 6 )

[connection signal="area_entered" from="." to="." method="_on_drone_area_entered"]
[connection signal="body_entered" from="exp" to="." method="_on_exp_body_entered"]
